# chromatin-protocol

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  GEMINI.md  MESSAGING-FLOW.md  PROTOCOL-SPEC.md  PROTOCOL.md  README.md  TECHNICAL-PAPER.md  TODO.md  protocol.md
cli/: BACKLOG.md  CMakeLists.txt  README.md
cli/src/: chunked.cpp  chunked.h  commands.cpp  commands.h  commands_internal.h  connection.cpp  connection.h  contacts.cpp  contacts.h  envelope.cpp  envelope.h  error_decoder.cpp  identity.cpp  identity.h  main.cpp  pipeline_pump.h  pubk_presence.cpp  pubk_presence.h  wire.cpp  wire.h
cli/tests/: CMakeLists.txt  pipeline_test_support.h  test_auto_pubk.cpp  test_chunked.cpp  test_connection_pipelining.cpp  test_contacts.cpp  test_envelope.cpp  test_identity.cpp  test_wire.cpp
db/: ARCHITECTURE.md  CMakeLists.txt  PROTOCOL.md  README.md  main.cpp  version.h  version.h.in
db/acl/: access_control.cpp  access_control.h
db/config/: config.cpp  config.h
db/crypto/: aead.cpp  aead.h  hash.cpp  hash.h  kdf.cpp  kdf.h  kem.cpp  kem.h  master_key.cpp  master_key.h  secure_bytes.h  signing.cpp  signing.h  thread_pool.h  verify_helpers.h
db/engine/: chunking.cpp  chunking.h  engine.cpp  engine.h
db/identity/: identity.cpp  identity.h
db/logging/: logging.cpp  logging.h
db/net/: auth_helpers.h  connection.cpp  connection.h  framing.cpp  framing.h  handshake.cpp  handshake.h  protocol.cpp  protocol.h  role.h  server.cpp  server.h  uds_acceptor.cpp  uds_acceptor.h
db/peer/: blob_push_manager.cpp  blob_push_manager.h  connection_manager.cpp  connection_manager.h  error_codes.h  message_dispatcher.cpp  message_dispatcher.h  metrics_collector.cpp  metrics_collector.h  peer_manager.cpp  peer_manager.h  peer_types.h  pex_manager.cpp  pex_manager.h  sync_orchestrator.cpp  sync_orchestrator.h  sync_reject.h
db/schemas/: blob.fbs  transport.fbs
db/storage/: storage.cpp  storage.h  thread_check.h
db/sync/: reconciliation.cpp  reconciliation.h  sync_protocol.cpp  sync_protocol.h
db/tests/: test_daemon.cpp  test_helpers.h  test_schema_phase122.cpp
db/util/: address.h  blob_helpers.h  endian.h  hex.h  paths.h
db/wire/: blob_generated.h  codec.cpp  codec.h  transport_generated.h
relay/: CMakeLists.txt  asio_ssl.cpp  lsan_suppressions.txt  relay_main.cpp
relay/config/: relay_config.cpp  relay_config.h
relay/core/: authenticator.cpp  authenticator.h  chunked_stream.h  message_filter.cpp  message_filter.h  metrics_collector.cpp  metrics_collector.h  rate_limiter.h  relay_session.cpp  relay_session.h  request_router.cpp  request_router.h  session.cpp  session.h  session_dispatch.h  subscription_tracker.cpp  subscription_tracker.h  uds_multiplexer.cpp  uds_multiplexer.h  write_tracker.h
relay/http/: handlers_data.cpp  handlers_data.h  handlers_pubsub.cpp  handlers_pubsub.h  handlers_query.cpp  handlers_query.h  http_connection.cpp  http_connection.h  http_parser.cpp  http_parser.h  http_response.h  http_router.cpp  http_router.h  http_server.cpp  http_server.h  response_promise.h  sse_writer.cpp  sse_writer.h  token_store.cpp  token_store.h
relay/identity/: relay_identity.cpp  relay_identity.h
relay/tests/: CMakeLists.txt  test_aead.cpp  test_authenticator.cpp  test_base64.cpp  test_chunked_stream.cpp  test_handlers_data.cpp  test_handlers_query.cpp  test_http_parser.cpp  test_http_response.cpp  test_http_router.cpp  test_message_filter.cpp  test_metrics_collector.cpp  test_offload_if_large.cpp  test_rate_limiter.cpp  test_relay_config.cpp  test_request_router.cpp  test_response_promise.cpp  test_session.cpp  test_sse_writer.cpp  test_subscription_tracker.cpp  test_token_store.cpp  test_translator.cpp  test_transport_codec.cpp  test_type_registry.cpp  test_uds_chunked.cpp  test_write_tracker.cpp  test_ws_frame.cpp  test_ws_handshake.cpp
relay/translate/: json_schema.cpp  json_schema.h  translator.cpp  translator.h  type_registry.cpp  type_registry.h
relay/util/: base64.cpp  base64.h  endian.h  hex.h  offload_if_large.h  thread_pool.h
relay/wire/: aead.cpp  aead.h  blob_codec.cpp  blob_codec.h  blob_generated.h  transport_codec.cpp  transport_codec.h
relay/ws/: session_manager.cpp  session_manager.h  ws_acceptor.cpp  ws_acceptor.h  ws_frame.cpp  ws_frame.h  ws_handshake.cpp  ws_handshake.h  ws_session.cpp  ws_session.h
sdk/python/: README.md  pyproject.toml
src/: CMakeLists.txt  api.cpp  auth.cpp  config.cpp  dht.cpp  log.cpp  main.cpp  node.cpp  placeholder.cpp  relay.cpp  storage.cpp
src/config/: config.cpp  config.h
src/crypto/: aead.cpp  aead.h  crypto.cpp  crypto.h  hash.h  kdf.h  kem.cpp  kem.h  signing.h
src/engine/: engine.cpp  engine.h
src/identity/: identity.h
src/kademlia/: kademlia.cpp  kademlia.h  node_id.cpp  node_id.h  routing_table.cpp  routing_table.h  tcp_encryption.cpp  tcp_encryption.h  tcp_transport.cpp  tcp_transport.h  udp_transport.cpp  udp_transport.h
src/logging/: logging.cpp  logging.h
src/net/: connection.cpp  connection.h  framing.h  handshake.cpp  protocol.cpp  protocol.h  server.cpp  server.h
src/peer/: peer_manager.cpp  peer_manager.h
src/replication/: repl_log.cpp  repl_log.h
src/storage/: storage.cpp  storage.h
src/sync/: sync_protocol.cpp  sync_protocol.h
src/wire/: blob_generated.h  transport_generated.h
src/ws/: worker_pool.h  ws_server.cpp  ws_server.h
tests/: CMakeLists.txt  bench_kademlia.cpp  placeholder_test.cpp  test_aead.cpp  test_config.cpp  test_crypto.cpp  test_daemon.cpp  test_kademlia.cpp  test_kem.cpp  test_node_id.cpp  test_repl_log.cpp  test_routing_table.cpp  test_storage.cpp  test_tcp_encryption.cpp  test_tcp_transport.cpp  test_udp_transport.cpp  test_worker_pool.cpp  test_ws_client.h  test_ws_server.cpp
tests/config/: test_config.cpp
tests/crypto/: test_aead.cpp  test_hash.cpp  (+3 more)
tools/: CMakeLists.txt  benchmark_report.md  envelope_test_vectors.py  loadtest-100k.sh  relay_asan_test.sh  relay_benchmark.py  relay_feature_test.cpp  relay_perf_test.sh  relay_smoke_test.cpp  relay_test_helpers.h  relay_uds_tap.cpp  test_vector_generator.cpp  verify_main.cpp
(+1488 files in other folders)
